[gd_scene load_steps=8 format=3 uid="uid://dlu086iuonjm7"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_le6ac"]
[ext_resource type="Texture2D" uid="uid://ipmhr83c38uf" path="res://Sprites/Healthbar.png" id="1_q7lyp"]
[ext_resource type="Texture2D" uid="uid://bjmje8nyb6gkl" path="res://Sprites/Healthbar2.png" id="2_mitvj"]
[ext_resource type="Theme" uid="uid://cg51xn2o6bhqx" path="res://Themes/new_theme.tres" id="2_mqy5o"]
[ext_resource type="PackedScene" uid="uid://cifg0c4wudc3m" path="res://Scenes/Effects/CantAfford.tscn" id="2_v5eq1"]
[ext_resource type="PackedScene" uid="uid://0iim021blvjp" path="res://Scenes/upgrade_options.tscn" id="6_ra3gs"]
[ext_resource type="PackedScene" uid="uid://by8kp5mp38pbm" path="res://Scenes/Inventory/InventoryUI.tscn" id="7_bqbh4"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_le6ac")
cant_afford = ExtResource("2_v5eq1")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mqy5o")

[node name="Died" type="Control" parent="GUI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouDied" type="Label" parent="GUI/Died"]
modulate = Color(0.54902, 0.105882, 0.207843, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -114.0
offset_right = 299.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "You Died!"

[node name="YouDied2" type="Label" parent="GUI/Died"]
modulate = Color(0.54902, 0.105882, 0.207843, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = 70.0
offset_right = 420.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "Pause to go to menu"

[node name="Healthbar" type="TextureProgressBar" parent="GUI"]
layout_mode = 0
offset_left = 57.0
offset_top = -18.0
offset_right = 173.0
offset_bottom = 89.0
scale = Vector2(2, 2)
value = 32.0
nine_patch_stretch = true
texture_under = ExtResource("1_q7lyp")
texture_progress = ExtResource("2_mitvj")

[node name="MoneyDisplay" type="Label" parent="GUI"]
modulate = Color(0, 0, 0, 0.803922)
layout_mode = 0
offset_left = 60.0
offset_top = 128.0
offset_right = 438.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 31
text = "MONEY AMOUNT"
autowrap_mode = 3

[node name="PausedScreen" type="ColorRect" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="GridContainer" type="GridContainer" parent="GUI/PausedScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -191.0
offset_right = 250.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 30

[node name="ResumeButtom" type="Button" parent="GUI/PausedScreen/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="MenuButton" type="Button" parent="GUI/PausedScreen/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[node name="UpgradeMenu" type="PanelContainer" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI/UpgradeMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/UpgradeMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Select an upgrade"

[node name="UpgradeContainer" type="HBoxContainer" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradeOptions" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer" instance=ExtResource("6_ra3gs")]
layout_mode = 2

[node name="UpgradeOptions2" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer" instance=ExtResource("6_ra3gs")]
layout_mode = 2

[node name="UpgradeOptions3" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer" instance=ExtResource("6_ra3gs")]
layout_mode = 2

[node name="NextLevel" type="Button" parent="GUI/UpgradeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Proceed to Next Level"

[node name="InventoryUI" parent="GUI" instance=ExtResource("7_bqbh4")]
visible = false
layout_mode = 1

[node name="Fade" type="ColorRect" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="GUI/PausedScreen/GridContainer/ResumeButtom" to="." method="_on_resume_buttom_pressed"]
[connection signal="pressed" from="GUI/PausedScreen/GridContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer/UpgradeOptions" to="." method="_on_upgrade_options_pressed"]
[connection signal="pressed" from="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer/UpgradeOptions2" to="." method="_on_upgrade_options_2_pressed"]
[connection signal="pressed" from="GUI/UpgradeMenu/MarginContainer/VBoxContainer/UpgradeContainer/UpgradeOptions3" to="." method="_on_upgrade_options_3_pressed"]
[connection signal="pressed" from="GUI/UpgradeMenu/MarginContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
